--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -15,11 +15,13 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">HOME</a></li>
+                        <li><h:link value="Livros" outcome="livros"/></li>
                         <li><a href="services.html">MENU 1</a></li>
                         <li><a href="portfolio.html">MENU 2</a></li>
                         <li><a href="pricing.html">MENU 3</a></li>
-                        <li><h:link value="Logout" outcome="#{loginMB.realizaLogout()}"/></li>
+                        <li><h:form>
+                            <h:commandLink value="Logout" action="#{loginMB.realizaLogout()}"/>
+                        </h:form></li>
                     </ul>
                 </div>
             </div>
