Edição de Livro

--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -11,11 +11,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Biblioteca</a>
+                    <h:link styleClass="navbar-brand" value="Biblioteca" outcome="/admin/index"/>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><h:link value="Livros" outcome="livros"/></li>
+                        <li><h:link value="Livros" outcome="/admin/livros"/></li>
                         <li><a href="services.html">MENU 1</a></li>
                         <li><a href="portfolio.html">MENU 2</a></li>
                         <li><a href="pricing.html">MENU 3</a></li>
