Cadastro de livros

--- a/web/templates/admin.xhtml
+++ b/web/templates/admin.xhtml
@@ -12,6 +12,16 @@
         <h:outputScript name="js/jquery-2.1.4.min.js" />
         <h:outputScript name="js/bootstrap.min.js" />
         <title>Biblioteca</title>
+        <h:outputStylesheet >
+            body {
+                padding-top: 60px;
+              }
+              @media (max-width: 979px) {
+                body {
+                  padding-top: 0px;
+                }
+              }
+        </h:outputStylesheet>
     </h:head>
 
     <h:body>
